--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
 h1 {
     text-align: center;
 }
+
+body {
+    background-color: lightgrey;
+}
+
+.picture {
+    height: auto;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+ul,
+ol {
+    font-size: 18px;
+}
